fixed minor internet explorer bug which causes svgs with auto-width property stretched to 100%

--- a/clients/youtube_producer/js/yt_viewer/yt_viewer.styl
+++ b/clients/youtube_producer/js/yt_viewer/yt_viewer.styl
@@ -78,7 +78,7 @@
             
             svg {
                 height: 12px;
-                width: auto;
+                width: 12px;
                 position: relative;
                 top: 0;
                 margin: 0 0 0 5px;
@@ -88,8 +88,15 @@
                 svg {
                     transform: scaleX(-1);
                     margin: 0 5px 0 0;
+                    
                 }
             }
+        }
+        
+        .app-send-to-tv {
+          svg {
+            width: 30px;
+          }
         }
     }
 }
